--- a/assets/css/account/section-account.css
+++ b/assets/css/account/section-account.css
@@ -64,6 +64,24 @@
 }
 
 /* Order history */
+.sec-account__order-history-heading {
+  font-size: 2.4rem;
+  margin: 0;
+  margin-bottom: 32px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.4;
+  color: var(--text-dark-color);
+}
+
+.sec-account__order-history-heading i {
+  font-size: 4.4rem;
+  margin-right: 24px;
+  color: var(--text-dark-color);
+}
+
 .sec-account__order-history-list {
   display: flex;
   flex-direction: column;
@@ -114,7 +132,8 @@
   transition: all 0.3s ease-in-out;
 }
 
-.sec-account__order-history-item:hover .sec-account__order-history-item-list-wrapper {
+.sec-account__order-history-item:hover
+  .sec-account__order-history-item-list-wrapper {
   grid-template-rows: 1fr;
 }
 
@@ -123,6 +142,7 @@
   flex-direction: column;
   gap: 24px;
   overflow: hidden;
+  min-height: 96px;
 }
 
 .sec-account__no-order {
