add status accept, decline in admin and customer page

--- a/assets/css/account/section-account.css
+++ b/assets/css/account/section-account.css
@@ -98,7 +98,7 @@
   display: flex;
   justify-content: space-between;
   line-height: 1.6;
-  background-color: var(--text-dark-color);
+  background-color: var(--status-color);
   padding: 12px;
   flex-wrap: wrap;
   gap: 8px;
