--- a/assets/css/commons/base.css
+++ b/assets/css/commons/base.css
@@ -27,6 +27,10 @@
   --black-alpha-10: rgba(0, 0, 0, 0.1);
   --black-alpha-5: rgba(0, 0, 0, 0.05);
   --black-alpha-2: rgba(0, 0, 0, 0.02);
+
+  --success-color: #2C7B3F;
+  --danger-color: #E68F31;
+  --error-color: #CF0022;
 }
 
 *,
