--- a/assets/css/payment/section-payment.css
+++ b/assets/css/payment/section-payment.css
@@ -123,7 +123,7 @@
   gap: 32px;
 }
 
-.sec-payment__back-cart-btn {
+.sec-payment__back-cart-btn, .sec-payment__back-info-btn {
   color: var(--primary-color-light);
   font-size: 1.4rem;
   font-weight: 300;
@@ -134,10 +134,11 @@
   padding: 0;
 }
 
-.sec-payment__back-cart-btn i {
+.sec-payment__back-cart-btn i, .sec-payment__back-info-btn i {
   font-size: 1.2rem;
 }
 
+.sec-payment__go-payment-btn,
 .sec-payment__payment-btn {
   font-size: 1.4rem;
   font-weight: 300;
@@ -145,6 +146,10 @@
   border-radius: 4px;
   min-width: 170px;
   min-height: 50px;
+}
+
+.sec-payment__back-info-btn {
+  margin-top: 32px;
 }
 
 .sec-payment__right-container {
