--- a/assets/css/payment/section-payment.css
+++ b/assets/css/payment/section-payment.css
@@ -73,14 +73,18 @@
 .sec-payment__shipping-type-wrapper {
   display: flex;
   align-items: center;
-  padding: 16px 24px;
+  padding: 0 24px;
   border-radius: 4px;
   border: 1px solid var(--primary-color-light);
   cursor: pointer;
 }
 
 .sec-payment__shipping-type-wrapper:has(input:checked) {
-  background-color: rgba(60, 97, 158, 0.06);
+  background-color: rgba(60, 97, 158, 0.07);
+}
+
+.sec-payment__shipping-type-wrapper:nth-of-type(1) {
+  margin-bottom: 12px;
 }
 
 .sec-payment__shipping-type-input {
@@ -91,8 +95,10 @@
 
 .sec-payment__shipping-type-label {
   font-size: 1.4rem;
-  display: flex;
+  display: inline-flex;
   align-items: center;
+  width: 100%;
+  padding-block: 16px;
 }
 
 .sec-payment__shipping-type-label i {
